Add functionality(ads) and css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
               <ul class="dropdown-menu dropdown-menu-default">
                 <li>
                   <!--<a (click)="logout()">-->
-                  <a href="/App-SCM-Api-web/Logout">
+                  <a href="/ApiSocut24-web/Logout">
                     <i class="icon-logout"></i> Logout </a>
                 </li>
               <!--  <li (click)="changeLanguage('en');">
