--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
         <!-- BEGIN LOGO -->
         <div class="page-logo">
-          <a href="/">  <!--/dashboard-->
+          <a href="/ApiSocut24-web">  <!--/dashboard-->
             <span alt="logo" class="logo-top"></span> </a>
 
         </div>
